--- a/app/src/main/res/layout/adapter_banner_label.xml
+++ b/app/src/main/res/layout/adapter_banner_label.xml
@@ -1,11 +1,13 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.sprout.app.weight.photodraweeview.PictureTagFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:id="@+id/picture_tag_frame_layout"
     android:layout_height="match_parent">
 
     <ImageView
+        android:visibility="gone"
         android:id="@+id/banner_image"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="1dp"
+        android:layout_height="1dp"
         android:scaleType="centerCrop" />
 
-</RelativeLayout>
+</com.sprout.app.weight.photodraweeview.PictureTagFrameLayout>
