--- a/app/src/main/res/layout/fragment_label.xml
+++ b/app/src/main/res/layout/fragment_label.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
+        <variable
+            name="onClick"
+            type="com.sprout.ui.fragment.main.LabelFragment.Proxy" />
 
     </data>
 
@@ -35,7 +40,7 @@
             app:layout_constraintStart_toStartOf="@id/textView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="@id/textView"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="12dp"
             android:layout_height="wrap_content"/>
 
         <ImageView
@@ -45,24 +50,151 @@
             app:layout_constraintBottom_toBottomOf="@id/txt_label_banner_index"
             android:layout_width="36dp"
             android:padding="12dp"
+            android:onClick="@{(view)->onClick.txtTag(view)}"
             android:id="@+id/image_label_back"
             android:layout_height="45dp"/>
 
 
-        <com.zhpan.bannerview.BannerViewPager
+        <androidx.viewpager.widget.ViewPager
             android:id="@+id/banner_label"
-            app:layout_constraintTop_toBottomOf="@id/textView"
-            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@id/recycler_recent_tag"
+            android:layout_marginTop="8dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            android:clipChildren="false"
+            android:clipToPadding="false"
+            android:background="@color/white"
             android:layout_width="0dp"
-            app:layout_constraintDimensionRatio="h,4:3,m"
+            app:layout_constraintDimensionRatio="h,16:9"
             android:layout_height="0dp"/>
 
 
 
+        <EditText
+            android:id="@+id/edit_label_input_search"
+            android:layout_width="0dp"
+            android:layout_height="35dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="24dp"
+            android:background="@drawable/shape_laber"
+            android:padding="0dp"
+            android:ems="10"
+            android:textSize="13sp"
+            android:paddingStart="36dp"
+            android:hint="输入想标记的内容"
+            android:inputType="textPersonName"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/banner_label" />
+
+        <TextView
+            android:layout_marginTop="12dp"
+            android:id="@+id/txt_tag_brand"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="品牌"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:onClick="@{(view)->onClick.txtTag(view)}"
+            android:textColor="@color/black"
+            app:layout_constraintEnd_toStartOf="@id/txt_tag_goods"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/edit_label_input_search" />
+
+        <TextView
+            android:id="@+id/txt_tag_goods"
+            android:layout_width="0dp"
+            app:layout_constraintTop_toTopOf="@id/txt_tag_brand"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:onClick="@{(view)->onClick.txtTag(view)}"
+            android:text="商品"
+            app:layout_constraintEnd_toStartOf="@id/txt_tag_user"
+            app:layout_constraintStart_toEndOf="@+id/txt_tag_brand"
+            />
+
+        <TextView
+            android:id="@+id/txt_tag_user"
+            android:layout_width="0dp"
+            android:onClick="@{(view)->onClick.txtTag(view)}"
+            android:layout_height="wrap_content"
+            android:text="用户"
+            android:gravity="center"
+            app:layout_constraintTop_toTopOf="@id/txt_tag_brand"
+            app:layout_constraintEnd_toStartOf="@id/txt_tag_location"
+            app:layout_constraintStart_toEndOf="@+id/txt_tag_goods"
+            />
+
+        <TextView
+            android:onClick="@{(view)->onClick.txtTag(view)}"
+            android:id="@+id/txt_tag_location"
+            android:layout_width="0dp"
+            android:gravity="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:text="地点"
+            app:layout_constraintStart_toEndOf="@id/txt_tag_user"
+            app:layout_constraintTop_toTopOf="@id/txt_tag_brand"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_marginTop="16dp"
+            android:background="#ededed"
+            android:text="TextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txt_tag_goods" />
 
 
+        <TextView
+            android:id="@+id/txt_label_next"
+            android:layout_width="60dp"
+            android:layout_height="20dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/shape_label_next"
+            android:gravity="center"
+            android:text="下一步"
+            android:textColor="@color/white"
+            android:onClick="@{(view)->onClick.txtTag(view)}"
+            android:textSize="13sp"
+            app:layout_constraintBottom_toBottomOf="@id/image_label_back"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/image_label_back" />
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_label_channel"
+            android:layout_marginTop="12dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/textView7"
+            tools:layout_editor_absoluteX="0dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:textSize="14sp"
+            android:id="@+id/textView8"
+            android:layout_marginTop="12dp"
+            android:textColor="@color/black"
+            android:text="最近标记"
+            app:layout_constraintTop_toBottomOf="@id/textView"
+            app:layout_constraintStart_toStartOf="@id/edit_label_input_search"
+            android:layout_height="wrap_content"/>
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_marginTop="8dp"
+            android:id="@+id/recycler_recent_tag"
+            android:layout_width="0dp"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textView8"
+            app:layout_constraintStart_toStartOf="@id/textView8"
+            android:layout_height="25dp"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
