--- a/app/src/main/res/layout/fragment_label.xml
+++ b/app/src/main/res/layout/fragment_label.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -11,63 +11,83 @@
 
     </data>
 
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:background="@color/homeBg"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/homeBg">
+
+
+        <androidx.constraintlayout.widget.Group
+            android:layout_width="wrap_content"
+            android:id="@+id/group"
+            android:layout_height="wrap_content"
+            app:constraint_referenced_ids="banner_label,
+            textView7,
+            textView8,
+            edit_label_input_search,
+            txt_label_banner_index,
+            image_label_back,
+            banner_label,
+            txt_label_banner_index,
+            recycler_label_channel,
+            txt_tag_user,
+            txt_tag_location,
+            txt_tag_goods,
+            txt_tag_brand,
+            recycler_recent_tag" />
 
 
         <TextView
+            android:id="@+id/textView"
             android:layout_width="match_parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:gravity="center_horizontal|bottom"
+            android:layout_height="70dp"
             android:background="@color/white"
+            android:gravity="center_horizontal|bottom"
             android:textColor="@color/black"
             android:textStyle="bold"
-            android:id="@+id/textView"
-            android:layout_height="70dp"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
         <TextView
             android:id="@+id/txt_label_banner_index"
             android:layout_width="wrap_content"
-            android:textSize="18sp"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:text="1/5"
-            app:layout_constraintStart_toStartOf="@id/textView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="@id/textView"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
-            android:layout_height="wrap_content"/>
+            android:text="1/5"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@id/textView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@id/textView" />
 
         <ImageView
-            android:src="@drawable/map_back"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/txt_label_banner_index"
-            app:layout_constraintBottom_toBottomOf="@id/txt_label_banner_index"
-            android:layout_width="36dp"
-            android:padding="12dp"
-            android:onClick="@{(view)->onClick.txtTag(view)}"
             android:id="@+id/image_label_back"
-            android:layout_height="45dp"/>
+            android:layout_width="36dp"
+            android:layout_height="45dp"
+            android:onClick="@{(view)->onClick.txtTag(view)}"
+            android:padding="12dp"
+            android:src="@drawable/map_back"
+            app:layout_constraintBottom_toBottomOf="@id/txt_label_banner_index"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/txt_label_banner_index" />
 
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/banner_label"
-            app:layout_constraintTop_toBottomOf="@id/recycler_recent_tag"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@color/white"
             android:clipChildren="false"
             android:clipToPadding="false"
-            android:background="@color/white"
-            android:layout_width="0dp"
             app:layout_constraintDimensionRatio="h,16:9"
-            android:layout_height="0dp"/>
-
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/recycler_recent_tag" />
 
 
         <EditText
@@ -78,27 +98,27 @@
             android:layout_marginTop="12dp"
             android:layout_marginEnd="24dp"
             android:background="@drawable/shape_laber"
-            android:padding="0dp"
             android:ems="10"
-            android:textSize="13sp"
-            android:paddingStart="36dp"
             android:hint="输入想标记的内容"
             android:inputType="textPersonName"
+            android:padding="0dp"
+            android:paddingStart="36dp"
+            android:textSize="13sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/banner_label" />
 
         <TextView
-            android:layout_marginTop="12dp"
             android:id="@+id/txt_tag_brand"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
             android:gravity="center"
+            android:onClick="@{(view)->onClick.txtTag(view)}"
             android:text="品牌"
+            android:textColor="@color/black"
             android:textSize="15sp"
             android:textStyle="bold"
-            android:onClick="@{(view)->onClick.txtTag(view)}"
-            android:textColor="@color/black"
             app:layout_constraintEnd_toStartOf="@id/txt_tag_goods"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/edit_label_input_search" />
@@ -106,37 +126,35 @@
         <TextView
             android:id="@+id/txt_tag_goods"
             android:layout_width="0dp"
-            app:layout_constraintTop_toTopOf="@id/txt_tag_brand"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:onClick="@{(view)->onClick.txtTag(view)}"
             android:text="商品"
             app:layout_constraintEnd_toStartOf="@id/txt_tag_user"
             app:layout_constraintStart_toEndOf="@+id/txt_tag_brand"
-            />
+            app:layout_constraintTop_toTopOf="@id/txt_tag_brand" />
 
         <TextView
             android:id="@+id/txt_tag_user"
             android:layout_width="0dp"
-            android:onClick="@{(view)->onClick.txtTag(view)}"
             android:layout_height="wrap_content"
-            android:text="用户"
             android:gravity="center"
-            app:layout_constraintTop_toTopOf="@id/txt_tag_brand"
+            android:onClick="@{(view)->onClick.txtTag(view)}"
+            android:text="用户"
             app:layout_constraintEnd_toStartOf="@id/txt_tag_location"
             app:layout_constraintStart_toEndOf="@+id/txt_tag_goods"
-            />
+            app:layout_constraintTop_toTopOf="@id/txt_tag_brand" />
 
         <TextView
-            android:onClick="@{(view)->onClick.txtTag(view)}"
             android:id="@+id/txt_tag_location"
             android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:gravity="center"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:onClick="@{(view)->onClick.txtTag(view)}"
             android:text="地点"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/txt_tag_user"
-            app:layout_constraintTop_toTopOf="@id/txt_tag_brand"
-            android:layout_height="wrap_content"/>
+            app:layout_constraintTop_toTopOf="@id/txt_tag_brand" />
 
         <TextView
             android:id="@+id/textView7"
@@ -157,44 +175,55 @@
             android:layout_marginEnd="16dp"
             android:background="@drawable/shape_label_next"
             android:gravity="center"
+            android:onClick="@{(view)->onClick.txtTag(view)}"
             android:text="下一步"
             android:textColor="@color/white"
-            android:onClick="@{(view)->onClick.txtTag(view)}"
             android:textSize="13sp"
-            app:layout_constraintBottom_toBottomOf="@id/image_label_back"
+            android:layout_marginTop="30dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/image_label_back" />
+            app:layout_constraintTop_toTopOf="@id/textView" />
 
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_label_channel"
-            android:layout_marginTop="12dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
             app:layout_constraintTop_toBottomOf="@+id/textView7"
             tools:layout_editor_absoluteX="0dp" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:textSize="14sp"
             android:id="@+id/textView8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:textColor="@color/black"
             android:text="最近标记"
-            app:layout_constraintTop_toBottomOf="@id/textView"
+            android:textColor="@color/black"
+            android:textSize="14sp"
             app:layout_constraintStart_toStartOf="@id/edit_label_input_search"
-            android:layout_height="wrap_content"/>
+            app:layout_constraintTop_toBottomOf="@id/textView" />
 
 
         <androidx.recyclerview.widget.RecyclerView
-            android:layout_marginTop="8dp"
             android:id="@+id/recycler_recent_tag"
             android:layout_width="0dp"
+            android:layout_height="25dp"
+            android:layout_marginTop="8dp"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textView8"
             app:layout_constraintStart_toStartOf="@id/textView8"
-            android:layout_height="25dp"/>
+            app:layout_constraintTop_toBottomOf="@id/textView8" />
+
+
+        <com.shuyu.gsyvideoplayer.video.StandardGSYVideoPlayer
+            android:id="@+id/video_label"
+            android:layout_width="0dp"
+            android:visibility="gone"
+            app:layout_constraintDimensionRatio="h,16:9"
+            app:layout_constraintTop_toBottomOf="@id/textView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_height="0dp"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
